# fastapi-sample

./: Dockerfile  README.md  compose.yml  pyproject.toml
app/: .env.example  database.py  main.py  pyproject.toml
